test/analyze/type_check/function/signature_body_error.myte
module test

// Error
fun foo1()

fun nestedFunction() {
  fun foo2()
}

fun main() {}